Tic tac toe with classes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 exercises/sfml/prog
 notes/10
+exercises/tic_tac_toe/oop/tempCodeRunnerFile.h
+exercises/tic_tac_toe/tictactoe_single
+exercises/tic_tac_toe/tictactoe.h.gch
+exercises/tic_tac_toe/oop/tictactoe_oop
