--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ exercises/tic_tac_toe/oop/tempCodeRunnerFile.h
 exercises/tic_tac_toe/tictactoe_single
 exercises/tic_tac_toe/tictactoe.h.gch
 exercises/tic_tac_toe/oop/tictactoe_oop
+exercises/sfml/click/click
