--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ exercises/tic_tac_toe/tictactoe_single
 exercises/tic_tac_toe/tictactoe.h.gch
 exercises/tic_tac_toe/oop/tictactoe_oop
 exercises/sfml/click/click
+exercises/sfml/space_invaders/prog
