--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ exercises/tic_tac_toe/tictactoe.h.gch
 exercises/tic_tac_toe/oop/tictactoe_oop
 exercises/sfml/click/click
 exercises/sfml/space_invaders/prog
+notes/12
+exercises/sfml/asteroids/asteroids
