--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ exercises/sfml/click/click
 exercises/sfml/space_invaders/prog
 notes/12
 exercises/sfml/asteroids/asteroids
+exercises/sfml/space_invaders/space_invaders_oop/prog
